# github_copilot_test

./: README.md
.github/workflows/: build-aab.yml  deploy-to-play-store.yml  get-version-code.yml
testApp/app/: build.gradle.kts
testApp/app/src/main/res/drawable/: ic_launcher_foreground.xml  ic_score_launcher.xml
testApp/app/src/main/res/values/: strings.xml
testApp/gradle/: libs.versions.toml
testApp/gradle/wrapper/: gradle-wrapper.properties
testApp2/: .gitignore  AGENTS.md  LICENSE  README.md  encryption_public_key.pem  keystore.properties.sample  settings.gradle.kts  upload_certificate.pem  upload_certificate_new.pem
testApp2/.github/: copilot-instructions.md
testApp2/.github/agents/: git.agent.md  impl.agent.md  orchestrator.agent.md  quality.agent.md  release.agent.md  spec.agent.md  techlead.agent.md  test.agent.md
testApp2/.github/specs/: category-hierarchy.md  category-session-hierarchy.md  drag-hang-fix-and-copy-navigation.md  session-copy-fix-and-drag-move.md
testApp2/.github/workflows/: build-aab.yml  deploy-to-play-store.yml  get-version-code.yml
testApp2/app/: build.gradle.kts
testApp2/app/release/: app-release.aab
testApp2/app/src/main/: AndroidManifest.xml
testApp2/app/src/main/res/drawable/: ic_keypad_background.xml  ic_keypad_foreground.xml  ic_pencil_foreground.xml  ic_token_background.xml  ic_token_foreground.xml
testApp2/app/src/main/res/mipmap-anydpi/: ic_launcher_keypad.xml  ic_launcher_pencil.xml  ic_launcher_token.xml
testApp2/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
testApp2/app/src/release/: AndroidManifest.xml
testApp2/gradle/: libs.versions.toml
testApp2/gradle/wrapper/: gradle-wrapper.properties
testGame/: CLEAN_ARCHITECTURE_DESIGN.md  Makefile  build_check.bat  copilot-agent.md  copilot.md  copilot.prompt.md  gradle.properties  settings.gradle.kts
testGame/.github/: copilot-instructions.md
testGame/app/: build.gradle.kts
testGame/app/src/main/: AndroidManifest.xml
testGame/app/src/main/assets/: unit_spawns.json
testGame/app/src/main/cpp/: CMakeLists.txt  Renderer.cpp  Renderer.h  Shader.cpp  TextureAsset.cpp  Unit.cpp  Unit.cpp.new  Unit.h  UnitRenderer.cpp  UnitRenderer.h  UnitStatusJNI.cpp  Unit_backup.cpp  Unit_broken.cpp  main.cpp
testGame/app/src/main/cpp/adapters/: LegacyUnitAdapter.h
testGame/app/src/main/cpp/adapters/integration/: LegacyIntegrationBridge.h
testGame/app/src/main/cpp/adapters/repositories/: MemoryUnitRepository.h
testGame/app/src/main/cpp/domain/entities/: CombatSystem.h  GameMap.cpp  GameMap.h  UnitEntity.h
testGame/app/src/main/cpp/domain/services/: CollisionDomainService.cpp  CollisionDomainService.h  CombatDomainService.cpp  CombatDomainService.h  MovementField.h
testGame/app/src/main/cpp/domain/value_objects/: Position.h  TerrainType.cpp  TerrainType.h  UnitStats.h
testGame/app/src/main/cpp/frameworks/: README.md
testGame/app/src/main/cpp/frameworks/android/: AndroidOut.h  TouchInputHandler.cpp  TouchInputHandler.h  UnitStatusJNI.cpp
testGame/app/src/main/cpp/frameworks/graphics/: Model.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  TextRenderer.cpp  TextRenderer.h  TextureAsset.cpp  TextureAsset.h  TileMapLoader.cpp  TileMapLoader.h  UnitRenderer.cpp  UnitRenderer.h
testGame/app/src/main/cpp/frameworks/utils/: Utility.cpp  Utility.h
testGame/app/src/main/cpp/legacy/: README.md  Unit.cpp
testGame/app/src/main/cpp/tests/: GameMapTest.h  IntegrationTest.h  UnitEntityTest.h
testGame/app/src/main/cpp/usecases/: CameraControlUseCase.cpp  CameraControlUseCase.h  CombatUseCase.cpp  CombatUseCase.h  MovementUseCase.cpp  MovementUseCase.h  MovementUseCase_backup.cpp
testGame/app/src/main/cpp/usecases/game/: GameFacade.h
testGame/app/src/main/cpp/usecases/interfaces/: IUnitRepository.h
testGame/app/src/main/cpp/usecases/unit/: AttackUnitUseCase.h  MoveUnitUseCase.h
testGame/app/src/main/res/drawable/: panel_background.xml
testGame/app/src/main/res/layout/: activity_main.xml  overlay_status.xml  view_status_board.xml
testGame/app/src/main/res/values-night/: themes.xml
testGame/gradle/: libs.versions.toml
testGame/gradle/wrapper/: gradle-wrapper.properties
(+44 files in other folders)
